fix(ui-navigation): fix position/transition of Nav expand/collapse button
refs: INSTUI-2500

TEST PLAN:
- ensure the Navigation expand/collapse button renders and works as expected

Reviewed-on: https://gerrit.instructure.com/c/instructure-ui/+/227163
Tested-by: Service Cloud Jenkins <svc.cloudjenkins@instructure.com>
Product-Review: Chris Hart <chart@instructure.com>
QA-Review: Pam Hiett <phiett@instructure.com>
Visual-Regression-Test: Pam Hiett <phiett@instructure.com>

--- a/packages/ui-navigation/src/Navigation/styles.css
+++ b/packages/ui-navigation/src/Navigation/styles.css
@@ -38,7 +38,7 @@
     width: var(--minimizedWidth);
 
     & > .toggle {
-      transform: rotate(180deg);
+      transform: rotate3d(0, 1, 0, -180deg);
     }
   }
 }
@@ -56,13 +56,12 @@
 }
 
 .toggle {
-  box-sizing: border-box;
-  width: inherit;
+  transform: translate3d(0, 0, 0);
+  transition: all var(--toggleTransition);
 }
 
 .toggleIcon {
-  display: block;
-  width: 100%;
   fill: var(--fill);
+  margin: 0 auto;
 }
 /* stylelint-enable selector-max-class, no-descending-specificity */
